# aoc

./: .gitignore  README.md
2024/: CMakeLists.txt
2024/day-01/: CMakeLists.txt  solution.c  solution.py
2024/day-02/: CMakeLists.txt  solution.c  solution.py
2024/day-03/: CMakeLists.txt  solution.c  solution.py
2024/day-04/: solution.py
2024/day-05/: solution.py
2024/day-06/: solution.py
2024/day-07/: solution.py
2024/day-08/: solution.py
